k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: images-gallery
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
